@@ -1,6 +1,14 @@
-News in 41, xxxx-yy-zz
+News in 41, 2022-02-14
 ----------------------------
-*
+* Fix some crashes, one when opening files, another when
+  deleting the open folder with the file browser plugin active
+* Fix buttons in the color scheme selector dialog
+* Build fixes
+* Improve symbolic icon coloring
+* Improve Save As behavior when saving error infobar is showing
+* Translation updates
+* Note that gnome-text-editor will be GNOME's recommended text
+  editor beginning with the GNOME 42 release next month
 
 News in 41.alpha, 2021-07-17
 ----------------------------
